third_party/cuda-oxide/crates/cuda-macros/tests/compile_fail/kernel_reserved_name.rs
use cuda_macros::kernel;

#[kernel]
fn cuda_oxide_kernel_evil() {}

fn main() {}
